<resources>
    <string name="app_name">EIR</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="load_remedies">Recuperando remédios</string>
    <string name="remedies_empty">Nenhum medicamento encontrado</string>
    <string name="code">Código: </string>
    <string name="information">Informações do produto</string>
    <string name="pharmacies">Fármácias:</string>
    <string name="download_remedies">Baixar Bula</string>
    <string name="composition">Composição </string>
    <string name="units_empty">Nenhuma unidade encontrada</string>
    <string name="street">Rua:</string>
    <string name="nember">Número:</string>
    <string name="complement">Complemento:</string>
    <string name="region">Setor:</string>
    <string name="zipcode">Código postal:</string>
    <string name="city">Cidade:</string>
    <string name="state">Estado:</string>
    <string name="country">País:</string>
</resources>
