<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pharmacy_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PharmacyPage">

    <TextView
        android:id="@+id/name_pharmacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/phone_pharmacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@+id/name_pharmacy"
        android:layout_margin="10dp" />

    <ImageView
        android:id="@+id/img_pharmacy"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street"
        android:layout_below="@+id/phone_pharmacy"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/street_pharmacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@+id/phone_pharmacy"
        android:layout_toRightOf="@+id/street"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:text="@string/nember"
        android:layout_below="@+id/street_pharmacy"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/number_pharmacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@+id/street_pharmacy"
        android:layout_toRightOf="@+id/number"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/complement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complement"
        android:layout_below="@+id/number_pharmacy"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/complement_pharmacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@+id/number_pharmacy"
        android:layout_toRightOf="@+id/complement"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/region"
        android:layout_below="@+id/complement_pharmacy"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/region_pharmacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@+id/complement_pharmacy"
        android:layout_toRightOf="@+id/region"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/zipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zipcode"
        android:layout_below="@+id/region_pharmacy"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/zipcode_pharmacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@+id/region_pharmacy"
        android:layout_toRightOf="@+id/zipcode"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:layout_below="@+id/zipcode_pharmacy"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/city_pharmacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@+id/zipcode_pharmacy"
        android:layout_toRightOf="@+id/city"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:layout_below="@+id/city_pharmacy"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/state_pharmacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@+id/city_pharmacy"
        android:layout_toRightOf="@+id/state"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:layout_below="@+id/state_pharmacy"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/country_pharmacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@+id/state_pharmacy"
        android:layout_toRightOf="@+id/country"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/lat_pharmacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@+id/country_pharmacy"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/lgn_pharmacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@+id/lat_pharmacy"
        android:layout_margin="10dp" />
</RelativeLayout>