<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/remedy_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RemedyPage">

    <TextView
        android:id="@+id/name_remedy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="name_medicine"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/amount_remedy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="amount_medicine"
        android:layout_below="@+id/name_remedy"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/units_remedy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="units_medicine"
        android:layout_below="@+id/amount_remedy"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/code_remedy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:layout_below="@+id/units_remedy"
        android:layout_margin="10dp"/>

    <ImageView
        android:id="@+id/img_remedy"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/information_remedy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:layout_below="@+id/img_remedy"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/indication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indication"
        android:layout_below="@+id/information_remedy"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/indication_remedy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="indication_remedy"
        android:layout_below="@+id/indication"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/button_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_remedies"
        android:layout_below="@+id/indication_remedy"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/pharmacies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pharmacies"
        android:layout_below="@+id/button_download"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/pharmacies_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="pharmacies_phone"
        android:layout_below="@+id/pharmacies"
        android:layout_margin="10dp"/>

</RelativeLayout>